Create views of users

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -39,6 +39,7 @@
         }
           .fa {
             dislpay: inline-block;
+            color: $white;
           }
 
         .sidebar__user--edit {
@@ -46,6 +47,7 @@
         }
           .fa {
             dislpay: inline-block;
+            color: $white;
           }
 
   .sidebar__groups {
