Add function of edit in users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,10 @@
 @import "./reset";
 @import "font-awesome";
 @import "mixin/clearfix";
+@import "./flashmessage";
 @import "./index";
 @import "./chat";
 @import "./sidebar";
+@import "./user";
+
+
