--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -58,6 +58,10 @@
 
     .sidebar__group--list {
       color: $white;
+
+      li {
+        padding: 20px;
+      }
     }
 
       .sidebar__group {
@@ -65,12 +69,11 @@
       }
 
         .sidebar__group--name {
-          font-size: 15px;
-
+          font-size: 18px;
         }
 
         .sidebar__group--message {
-          font-size: 11px;
+          font-size: 14px;
         }
 
 
