--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,8 @@
 @import "font-awesome";
 @import "mixin/clearfix";
 @import "./flashmessage";
+@import "./user";
 @import "./index";
 @import "./chat";
 @import "./sidebar";
-@import "./user";
-
-
+@import "./groups";
